--- a/AIML_Module_5_Lab_2_Loss_Functions.ipynb
+++ b/AIML_Module_5_Lab_2_Loss_Functions.ipynb
@@ -62,9 +62,10 @@
         "import matplotlib.pyplot as plt\n",
         "plt.style.use('ggplot')\n",
         "\n",
-        "# interactive visualization"
+        "# interactive visualization\n",
+        "#good"
       ],
-      "execution_count": null,
+      "execution_count": 1,
       "outputs": []
     },
     {
@@ -84,7 +85,7 @@
           "base_uri": "https://localhost:8080/",
           "height": 430
         },
-        "outputId": "eb1c7b96-a708-4842-9feb-8a187daffc37"
+        "outputId": "3919e699-4d7b-42be-96f8-6c085d77708b"
       },
       "source": [
         "# initializing random data\n",
@@ -98,7 +99,7 @@
         "plt.scatter(x,y_pred,color=\"blue\")\n",
         "plt.show()"
       ],
-      "execution_count": null,
+      "execution_count": 2,
       "outputs": [
         {
           "output_type": "display_data",
@@ -141,14 +142,14 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "y0KIs1xP2AbG",
-        "outputId": "fb89239d-ef2d-4f78-c2e2-c2f25c8cee1d"
+        "outputId": "664c4e63-9164-44df-e51c-2ebe89a1ddec"
       },
       "source": [
         "mse = np.mean((y_actual-y_pred)**2)\n",
         "print(\"MSE is: {}\".format(mse))\n",
         "print(\"RMSE is: {}\".format(np.sqrt(mse)))"
       ],
-      "execution_count": null,
+      "execution_count": 3,
       "outputs": [
         {
           "output_type": "stream",
@@ -180,13 +181,13 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "081ad925-11df-406e-e039-9ac0415ff3a8"
+        "outputId": "f2d45860-f7e5-46fd-b638-3b7b14aa11fd"
       },
       "source": [
         "mae = np.mean(np.abs(y_actual-y_pred))\n",
         "print(\"MAE is: {}\".format(mae))"
       ],
-      "execution_count": null,
+      "execution_count": 4,
       "outputs": [
         {
           "output_type": "stream",
@@ -298,7 +299,7 @@
           "base_uri": "https://localhost:8080/",
           "height": 607
         },
-        "outputId": "057d1eba-bd03-4f8a-fb13-edacacc00069"
+        "outputId": "81cdd1ff-60bd-4cdc-f02c-cdc1b6304e77"
       },
       "source": [
         "def sigmoid(z):\n",
@@ -325,7 +326,7 @@
         "plt.tight_layout()\n",
         "plt.show()"
       ],
-      "execution_count": null,
+      "execution_count": 5,
       "outputs": [
         {
           "output_type": "display_data",
@@ -371,7 +372,7 @@
       "metadata": {
         "id": "cQIX2HoAbqqD"
       },
-      "execution_count": null,
+      "execution_count": 6,
       "outputs": []
     },
     {
@@ -384,7 +385,7 @@
       "metadata": {
         "id": "VLMVfcylWlWB"
       },
-      "execution_count": null,
+      "execution_count": 7,
       "outputs": []
     },
     {
@@ -410,12 +411,12 @@
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 273
+          "height": 272
         },
         "id": "bkMzDwYaYTlQ",
-        "outputId": "f3b8d758-3f0c-4d0f-fa1d-35a6a5a5979a"
+        "outputId": "5f7174bd-e60e-4329-a731-d723e95e99fd"
       },
-      "execution_count": null,
+      "execution_count": 8,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -481,7 +482,7 @@
             ],
             "text/html": [
               "\n",
-              "  <div id=\"df-f4ad3380-734c-4b62-b772-7e97c733b2e0\" class=\"colab-df-container\">\n",
+              "  <div id=\"df-6376c1fa-a8df-413c-9a2b-f98d78f6976c\" class=\"colab-df-container\">\n",
               "    <div>\n",
               "<style scoped>\n",
               "    .dataframe tbody tr th:only-of-type {\n",
@@ -651,7 +652,7 @@
               "    <div class=\"colab-df-buttons\">\n",
               "\n",
               "  <div class=\"colab-df-container\">\n",
-              "    <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-f4ad3380-734c-4b62-b772-7e97c733b2e0')\"\n",
+              "    <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-6376c1fa-a8df-413c-9a2b-f98d78f6976c')\"\n",
               "            title=\"Convert this dataframe to an interactive table.\"\n",
               "            style=\"display:none;\">\n",
               "\n",
@@ -703,12 +704,12 @@
               "\n",
               "    <script>\n",
               "      const buttonEl =\n",
-              "        document.querySelector('#df-f4ad3380-734c-4b62-b772-7e97c733b2e0 button.colab-df-convert');\n",
+              "        document.querySelector('#df-6376c1fa-a8df-413c-9a2b-f98d78f6976c button.colab-df-convert');\n",
               "      buttonEl.style.display =\n",
               "        google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "\n",
               "      async function convertToInteractive(key) {\n",
-              "        const element = document.querySelector('#df-f4ad3380-734c-4b62-b772-7e97c733b2e0');\n",
+              "        const element = document.querySelector('#df-6376c1fa-a8df-413c-9a2b-f98d78f6976c');\n",
               "        const dataTable =\n",
               "          await google.colab.kernel.invokeFunction('convertToInteractive',\n",
               "                                                    [key], {});\n",
@@ -728,8 +729,8 @@
               "  </div>\n",
               "\n",
               "\n",
-              "<div id=\"df-afed4b95-e600-4571-bb19-8575c78890cf\">\n",
-              "  <button class=\"colab-df-quickchart\" onclick=\"quickchart('df-afed4b95-e600-4571-bb19-8575c78890cf')\"\n",
+              "<div id=\"df-e2fb88f6-c4c2-4a10-b4f9-693c976e0908\">\n",
+              "  <button class=\"colab-df-quickchart\" onclick=\"quickchart('df-e2fb88f6-c4c2-4a10-b4f9-693c976e0908')\"\n",
               "            title=\"Suggest charts\"\n",
               "            style=\"display:none;\">\n",
               "\n",
@@ -848,13 +849,12 @@
               "    }\n",
               "    (() => {\n",
               "      let quickchartButtonEl =\n",
-              "        document.querySelector('#df-afed4b95-e600-4571-bb19-8575c78890cf button');\n",
+              "        document.querySelector('#df-e2fb88f6-c4c2-4a10-b4f9-693c976e0908 button');\n",
               "      quickchartButtonEl.style.display =\n",
               "        google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "    })();\n",
               "  </script>\n",
               "</div>\n",
-              "\n",
               "    </div>\n",
               "  </div>\n"
             ]
@@ -878,7 +878,7 @@
       "metadata": {
         "id": "JyYJSSj-Z3mT"
       },
-      "execution_count": null,
+      "execution_count": 9,
       "outputs": []
     },
     {
@@ -895,7 +895,7 @@
       "metadata": {
         "id": "Pp38lIDgZsyn"
       },
-      "execution_count": null,
+      "execution_count": 10,
       "outputs": []
     },
     {
@@ -912,7 +912,7 @@
       "metadata": {
         "id": "XM_GDnVqbVKI"
       },
-      "execution_count": null,
+      "execution_count": 11,
       "outputs": []
     },
     {
@@ -938,9 +938,9 @@
           "height": 872
         },
         "id": "P0rIZOClcKI6",
-        "outputId": "097d81b7-6dfb-4db8-bf08-366502889afe"
+        "outputId": "4672e760-c6ac-45ef-9db9-06b4fd1d7d05"
       },
-      "execution_count": null,
+      "execution_count": 12,
       "outputs": [
         {
           "output_type": "display_data",
